--- a/theme/style.less
+++ b/theme/style.less
@@ -13,6 +13,30 @@
     Add your custom CSS here
 *******************************/
 
+#downloadArea .ui {
+    display: none !important;
+}
+
+#projectNameArea .ui {
+    display: none !important;
+}
+
+.left .ui {
+    display: none !important;
+}
+
+.right .openproject {
+    display: none !important;
+}
+
+.sign-in-dropdown {
+    display: none !important;
+}
+
+.menubar .right.menu {
+    justify-content: unset;
+}
+
 /* Open Sans font */
 @font-face {
     font-family: 'Share Tech Mono';
