Fix asset editor css
Signed-off-by: Ashley Payne <ashley@stocksourcing.com>

--- a/theme/style.less
+++ b/theme/style.less
@@ -41,6 +41,10 @@
     display: none !important;
 }
 
+.image-editor-coordinate-preview {
+    flex-grow: 0.75 !important;
+}
+
 /* Open Sans font */
 @font-face {
     font-family: 'Share Tech Mono';
