Change console background
Signed-off-by: Ashley Payne <ashley@stocksourcing.com>

--- a/theme/style.less
+++ b/theme/style.less
@@ -45,6 +45,14 @@
     flex-grow: 0.75 !important;
 }
 
+#serialConsole {
+    background-color: #fef3e0 !important;
+}
+
+#serialEditor {
+    background-color: #fef3e0 !important;
+}
+
 /* Open Sans font */
 @font-face {
     font-family: 'Share Tech Mono';
