Enable github for admin and change styles
Signed-off-by: Ashley Payne <ashley@stocksourcing.com>

--- a/theme/style.less
+++ b/theme/style.less
@@ -16,13 +16,9 @@
 #downloadArea .ui {
     display: none !important;
 }
-
-#projectNameArea .ui {
-    display: none !important;
-}
-
-.left .ui {
-    display: none !important;
+#downloadArea, #editorSidebar
+{
+    min-width: 1rem !important;
 }
 
 .right .openproject {
