--- a/theme/style.less
+++ b/theme/style.less
@@ -45,6 +45,18 @@
     background-color: #fef3e0 !important;
 }
 
+.fullscreen.extensions-browser > {
+    .common-modal > {
+        .common-modal-header {
+            background-color: #5fa9e0 !important;
+        }
+    }
+}
+
+.extensions-browser .extension-search-header {
+    padding-bottom: 1rem !important;
+}
+
 /* Open Sans font */
 @font-face {
     font-family: 'Share Tech Mono';
