--- a/theme/style.less
+++ b/theme/style.less
@@ -8,190 +8,192 @@
 
 /* Reference import */
 @import (reference) "semantic.less";
+.makecodeeditor {
+    /*******************************
+        Add your custom CSS here
+    *******************************/
 
-/*******************************
-    Add your custom CSS here
-*******************************/
+    #downloadArea .ui {
+        display: none !important;
+    }
 
-#downloadArea .ui {
-    display: none !important;
-}
+    .right .openproject {
+        display: none !important;
+    }
 
-.right .openproject {
-    display: none !important;
-}
+    .sign-in-dropdown {
+        display: none !important;
+    }
 
-.sign-in-dropdown {
-    display: none !important;
-}
+    .menubar .right.menu {
+        justify-content: unset;
+    }
 
-.menubar .right.menu {
-    justify-content: unset;
-}
+    .right [aria-label='Edit'] {
+        display: none !important;
+    }
 
-.right [aria-label='Edit'] {
-    display: none !important;
-}
+    .image-editor-coordinate-preview {
+        flex-grow: 0.75 !important;
+    }
 
-.image-editor-coordinate-preview {
-    flex-grow: 0.75 !important;
-}
+    #serialConsole {
+        background-color: #fef3e0 !important;
+    }
 
-#serialConsole {
-    background-color: #fef3e0 !important;
-}
+    #serialEditor {
+        background-color: #fef3e0 !important;
+    }
 
-#serialEditor {
-    background-color: #fef3e0 !important;
-}
-
-.fullscreen.extensions-browser > {
-    .common-modal > {
-        .common-modal-header {
-            background-color: #5fa9e0 !important;
+    .fullscreen.extensions-browser > {
+        .common-modal > {
+            .common-modal-header {
+                background-color: #5fa9e0 !important;
+            }
         }
     }
-}
 
-.extensions-browser .extension-search-header {
-    padding-bottom: 1rem !important;
-}
-
-/* Open Sans font */
-@font-face {
-    font-family: 'Share Tech Mono';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Share Tech Mono'),
-         data-uri('../docs/static/fonts/ShareTechMono-Regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-.simtoolbar .ui.button,
-.ui.button.play-button,
-.ui.button.restart-button,
-.ui.button.debug-button,
-.ui.button.collapse-button,
-.ui.button.collapsed-button {
-    &:extend(.ui.grey.button all);
-}
-
-.menubar .ui.menu.fixed .item.editor-menuitem .ui.grid,
-.menubar .ui.menu.fixed .ui.item.editor-menuitem .item {
-    border-radius: 0.2rem !important;
-}
-
-.projectsdialog .getting-started-segment {
-    background-position-y: center;
-}
-
-.projectsdialog .ui.card:hover {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-#simulators .ui.embed .icon.xicon::after {
-    border-radius: 12px;
-}
-
-#simulators .ui.embed .icon.xicon::before {
-    top: 33%
-}
-
-.ui.primary.button.download-button {
-    background-color: @orange;
-}
-
-.simtoolbar .ui.button.icon, #editortools .ui.button.editortools-btn {
-    background-color: @teal;
-}
-
-#editortools .ui.button.hw-button {
-    background-color: darken(desaturate(@orange, 20%), 10%);
-}
-
-#simulator .ui.button.play-button .icon.play {
-    color: @white!important;
-}
-
-#editortools .ui.button.editortools-btn, .simtoolbar .ui.button.icon {
-    background-color: #356c9b;
-}
-
-#homemenu .ui.item, #mainmenu .ui.item {
-    color: @white;
-}
-
-.common-radio-group.common-radio-buttons .common-radio-choice.selected {
-    color: @soundEffectHeaderColor;
-}
-
-.draggable-graph-path {
-    stroke: @soundEffectHeaderColor;
-}
-
-#editorToolbarArea {
-    margin-right: 75px !important;
-}
-
-/* Mobile */
-@media only screen and (max-width: @largestMobileScreen) {
-}
-
-/* Tablet */
-@media only screen and (min-width: @tabletBreakpoint) and (max-width: @largestTabletScreen) {
-}
-
-/* Small Monitor */
-@media only screen and (min-width: @computerBreakpoint) and (max-width: @largestSmallMonitor) {
-    // Display short logo ("MakeCode") instead of "MakeCode Arcade"
-    .ui.item.logo .name {
-        display: none;
-    }
-    .ui.item.logo .name-short {
-        display: block;
-    }
-}
-
-/* Small Monitor + Tablet */
-@media only screen and (min-width: @tabletBreakpoint) and (max-width: @largestSmallMonitor) {
-    // Hide Help menu in small desktop view)
-    .help-dropdown-menuitem.ui.item.dropdown {
-        display: none;
+    .extensions-browser .extension-search-header {
+        padding-bottom: 1rem !important;
     }
 
-    .more-dropdown-menuitem .setting-docs-item.ui.mobile.only {
-        display: block !important;
+    /* Open Sans font */
+    @font-face {
+        font-family: 'Share Tech Mono';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Share Tech Mono'),
+        data-uri('../docs/static/fonts/ShareTechMono-Regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
     }
-}
 
-/* Large Monitor */
-@media only screen and (min-width: @largeMonitorBreakpoint) {
-}
+    .simtoolbar .ui.button,
+    .ui.button.play-button,
+    .ui.button.restart-button,
+    .ui.button.debug-button,
+    .ui.button.collapse-button,
+    .ui.button.collapsed-button {
+        &:extend(.ui.grey.button all);
+    }
 
-@media only screen and (max-width: @largestTabletScreen) {
-    .simView #boardview {
-        padding-left: 0;
-        padding-right: 0;
-        padding-bottom: 0;
+    .menubar .ui.menu.fixed .item.editor-menuitem .ui.grid,
+    .menubar .ui.menu.fixed .ui.item.editor-menuitem .item {
+        border-radius: 0.2rem !important;
+    }
+
+    .projectsdialog .getting-started-segment {
+        background-position-y: center;
+    }
+
+    .projectsdialog .ui.card:hover {
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+
+    #simulators .ui.embed .icon.xicon::after {
+        border-radius: 12px;
     }
 
     #simulators .ui.embed .icon.xicon::before {
-        top: 50%
+        top: 33%
     }
-}
 
-.hero .hero-banner-contents .action .button {
-    background-color: @teal;
+    .ui.primary.button.download-button {
+        background-color: @orange;
+    }
 
-}
+    .simtoolbar .ui.button.icon, #editortools .ui.button.editortools-btn {
+        background-color: @teal;
+    }
 
-.script-content {
-    .ui.mini.link.list {
-        .ui.item.no-select {
-            color: #736f66;
+    #editortools .ui.button.hw-button {
+        background-color: darken(desaturate(@orange, 20%), 10%);
+    }
+
+    #simulator .ui.button.play-button .icon.play {
+        color: @white !important;
+    }
+
+    #editortools .ui.button.editortools-btn, .simtoolbar .ui.button.icon {
+        background-color: #356c9b;
+    }
+
+    #homemenu .ui.item, #mainmenu .ui.item {
+        color: @white;
+    }
+
+    .common-radio-group.common-radio-buttons .common-radio-choice.selected {
+        color: @soundEffectHeaderColor;
+    }
+
+    .draggable-graph-path {
+        stroke: @soundEffectHeaderColor;
+    }
+
+    #editorToolbarArea {
+        margin-right: 75px !important;
+    }
+
+    /* Mobile */
+    @media only screen and (max-width: @largestMobileScreen) {
+    }
+
+    /* Tablet */
+    @media only screen and (min-width: @tabletBreakpoint) and (max-width: @largestTabletScreen) {
+    }
+
+    /* Small Monitor */
+    @media only screen and (min-width: @computerBreakpoint) and (max-width: @largestSmallMonitor) {
+        // Display short logo ("MakeCode") instead of "MakeCode Arcade"
+        .ui.item.logo .name {
+            display: none;
+        }
+
+        .ui.item.logo .name-short {
+            display: block;
         }
     }
 
-    #abuse {
-        color: #324a61;
+    /* Small Monitor + Tablet */
+    @media only screen and (min-width: @tabletBreakpoint) and (max-width: @largestSmallMonitor) {
+        // Hide Help menu in small desktop view)
+        .help-dropdown-menuitem.ui.item.dropdown {
+            display: none;
+        }
+
+        .more-dropdown-menuitem .setting-docs-item.ui.mobile.only {
+            display: block !important;
+        }
+    }
+
+    /* Large Monitor */
+    @media only screen and (min-width: @largeMonitorBreakpoint) {
+    }
+
+    @media only screen and (max-width: @largestTabletScreen) {
+        .simView #boardview {
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 0;
+        }
+
+        #simulators .ui.embed .icon.xicon::before {
+            top: 50%
+        }
+    }
+
+    .hero .hero-banner-contents .action .button {
+        background-color: @teal;
+
+    }
+
+    .script-content {
+        .ui.mini.link.list {
+            .ui.item.no-select {
+                color: #736f66;
+            }
+        }
+
+        #abuse {
+            color: #324a61;
+        }
     }
 }
