--- a/theme/style.less
+++ b/theme/style.less
@@ -13,6 +13,10 @@
         Add your custom CSS here
     *******************************/
 
+    .ui.basic.table.segment {
+        height: auto;
+    }
+
     #downloadArea .ui {
         display: none !important;
     }
