--- a/theme/style.less
+++ b/theme/style.less
@@ -13,6 +13,14 @@
         Add your custom CSS here
     *******************************/
 
+    #downloadArea {
+        display: none;
+    }
+
+    #githubEditor {
+        background: none;
+    }
+
     .ui.basic.table.segment {
         height: auto;
     }
